--- a/index.html
+++ b/index.html
@@ -8,11 +8,34 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <canvas id="xxx"></canvas>
+       <canvas id="xxx"></canvas>
         <div id="actions" class="actions">
-            <button id="eraser">橡皮擦</button>
-            <button id="brush">画笔</button>
+                 <svg id="pen" class="active icon" aria-hidden="true">
+                    <use xlink:href="#icon-pen"></use>
+                </svg>
+                <svg id="eraser" class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-eraser"></use>
+                </svg>
+                <svg id="clear" class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-clear"></use>
+                </svg>
+                <svg id="download" class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-download"></use>
+                </svg>
         </div>
+   
+        <ol class="colors">
+                <li id="black" class="black active"></li>
+                <li id="red" class="red "></li>
+                <li id="green" class="green"></li>
+                <li id="blue" class="blue"></li>
+            </ol>
+            <ol class="sizes">
+                <li id="thin" class="thin"></li>
+                <li id="thick" class="thick"></li>
+            </ol>
         <script src="main.js"></script>
+        <script src="//at.alicdn.com/t/font_1324997_lylq53ci929.js"></script>
+       
     </body>
 </html>
