新增颜色选择器、画笔粗细调节器和返回上一步按钮

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
                 <svg id="eraser" class="icon" aria-hidden="true">
                         <use xlink:href="#icon-eraser"></use>
                 </svg>
+                <svg id="reback" class="icon" aria-hidden="true">
+                    <use xlink:href="#icon-reback"></use>
+                </svg>
                 <svg id="clear" class="icon" aria-hidden="true">
                         <use xlink:href="#icon-clear"></use>
                 </svg>
@@ -27,12 +30,14 @@
                 <li id="red" class="red"></li>
                 <li id="green" class="green"></li>
                 <li id="blue" class="blue"></li>
+                <input type="color" id="color_picker" class="colorPicker">
             </ol>
             <ol class="sizes">
                 <li id="thin" class="thin"></li>
                 <li id="thick" class="thick"></li>
+                <input type="range" id="adjust_size" min="1" max="100">
             </ol>
         <script src="main.js"></script>
-        <script src="//at.alicdn.com/t/font_1324997_j3ywiad9ttf.js"></script>
+        <script src="//at.alicdn.com/t/font_1324997_gkselqkcjx.js"></script>
     </body>
 </html>
